force-app/main/default/objects/Product2/fields/Medidas_Agrupadas__c.field-meta.xml
<CustomField>
    <fullName>Medidas_Agrupadas__c</fullName>
    <formula>ProductoLargoCm__c + &apos;x&apos; + ProductoAnchoCm__c + &apos;x&apos; + ProductoAltoCm__c + &apos; CM&apos; +
IF(NOT(OR(ISBLANK(ProductoDiametroCm__c), ProductoDiametroCm__c == &apos;0&apos;)),
&apos;ø&apos; + ProductoDiametroCm__c,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medidas del Producto Agrupadas</label>
    <type>Text</type>
</CustomField>