force-app/main/default/objects/Product2/fields/Medidas_del_Producto_Agrupadas2__c.field-meta.xml
<CustomField>
    <fullName>Medidas_del_Producto_Agrupadas2__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Producto&apos;,
 Medidas_Agrupadas__c,
IF(RecordType.DeveloperName == &apos;ProductoDeFabrica&apos;,
 ProductoBase__r.Medidas_Agrupadas__c,
  ProductoDeFabrica__r.ProductoBase__r.Medidas_Agrupadas__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medidas del Producto Agrupadas&apos;</label>
    <type>Text</type>
</CustomField>