force-app/main/default/objects/Product2/fields/Observaciones__c.field-meta.xml
<CustomField>
    <fullName>Observaciones__c</fullName>
    <description>Campo destinado a los Prospectos de Producto</description>
    <inlineHelpText>Recipient field for product prospects</inlineHelpText>
    <label>Observaciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>