force-app/main/default/objects/Product2/fields/Orden_Medidas__c.field-meta.xml
<CustomField>
    <fullName>Orden_Medidas__c</fullName>
    <formula>VALUE(ProductoLargoCm__c) * 1000000 + VALUE(ProductoAnchoCm__c) * 1000 + VALUE(ProductoAltoCm__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orden Medidas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>