force-app/main/default/objects/Product2/fields/Packaging__c.field-meta.xml
<CustomField>
    <fullName>Packaging__c</fullName>
    <label>Packaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-BROWN BOX</fullName>
            </value>
            <value>
                <fullName>2-BROWN BOX + HANGTAG</fullName>
            </value>
            <value>
                <fullName>3-BROWN BOX + COLOR LABEL</fullName>
            </value>
            <value>
                <fullName>7-WHITE BOX + COLOR LABEL</fullName>
            </value>
            <value>
                <fullName>9-COLOR BOX</fullName>
            </value>
            <value>
                <fullName>11-WINDOW BOX</fullName>
            </value>
            <value>
                <fullName>12-BLISTER</fullName>
            </value>
            <value>
                <fullName>13-STACK</fullName>
            </value>
            <value>
                <fullName>15-PDQ</fullName>
            </value>
            <value>
                <fullName>BOLSA RETRÁCTIL CON ETIQUETA COLOR Y CAJA MÁSTER</fullName>
                <isActive>false</isActive>
                <label>BOLSA RETRÁCTIL CON ETIQUETA COLOR Y CAJA MÁSTER</label>
            </value>
            <value>
                <fullName>CAJA  MASTER + ETIQUETA COLGANTE</fullName>
                <isActive>false</isActive>
                <label>CAJA  MASTER + ETIQUETA COLGANTE</label>
            </value>
            <value>
                <fullName>CAJA + ETIQUETA A COLOR</fullName>
                <isActive>false</isActive>
                <label>CAJA + ETIQUETA A COLOR</label>
            </value>
            <value>
                <fullName>CAJA BLANCA + PEGATINA A COLOR</fullName>
                <isActive>false</isActive>
                <label>CAJA BLANCA + PEGATINA A COLOR</label>
            </value>
            <value>
                <fullName>CAJA BLANCA CON A3 A COLOR</fullName>
                <isActive>false</isActive>
                <label>CAJA BLANCA CON A3 A COLOR</label>
            </value>
            <value>
                <fullName>CAJA BLANCA CON PEGATINA A COLOR</fullName>
                <isActive>false</isActive>
                <label>CAJA BLANCA CON PEGATINA A COLOR</label>
            </value>
            <value>
                <fullName>CAJA BLANCA CON STICKER A COLOR</fullName>
                <isActive>false</isActive>
                <label>CAJA BLANCA CON STICKER A COLOR</label>
            </value>
            <value>
                <fullName>CAJA BLANCA ETIQUETA A COLOR</fullName>
                <isActive>false</isActive>
                <label>CAJA BLANCA ETIQUETA A COLOR</label>
            </value>
            <value>
                <fullName>CAJA BLANCA ETIQUETA A COLOR Y HANGTAG</fullName>
                <isActive>false</isActive>
                <label>CAJA BLANCA ETIQUETA A COLOR Y HANGTAG</label>
            </value>
            <value>
                <fullName>CAJA BLANCA SERIFRAFIADA PEGATINA A COLOR HANGTAG</fullName>
                <isActive>false</isActive>
                <label>CAJA BLANCA SERIFRAFIADA PEGATINA A COLOR HANGTAG</label>
            </value>
            <value>
                <fullName>CAJA BLANCA STICKER UNIDAD</fullName>
                <isActive>false</isActive>
                <label>CAJA BLANCA STICKER UNIDAD</label>
            </value>
            <value>
                <fullName>CAJA FULL COLOR</fullName>
                <isActive>false</isActive>
                <label>CAJA FULL COLOR</label>
            </value>
            <value>
                <fullName>CAJA FULL COLOR ETIQUETA COLOR</fullName>
                <isActive>false</isActive>
                <label>CAJA FULL COLOR ETIQUETA COLOR</label>
            </value>
            <value>
                <fullName>CAJA MARRON SERIGRAFIADA
A3 A COLOR</fullName>
                <isActive>false</isActive>
                <label>CAJA MARRON SERIGRAFIADA
A3 A COLOR</label>
            </value>
            <value>
                <fullName>CAJA MARRÓN + A3 A COLOR</fullName>
                <isActive>false</isActive>
                <label>CAJA MARRÓN + A3 A COLOR</label>
            </value>
            <value>
                <fullName>CAJA MARRÓN CON A3 A COLOR</fullName>
                <isActive>false</isActive>
                <label>CAJA MARRÓN CON A3 A COLOR</label>
            </value>
            <value>
                <fullName>CAJA MARRÓN CON ETIQUETA A COLOR IMPRESA</fullName>
                <isActive>false</isActive>
                <label>CAJA MARRÓN CON ETIQUETA A COLOR IMPRESA</label>
            </value>
            <value>
                <fullName>CAJA MARRÓN CON ETIQUETA COLGANTE</fullName>
                <isActive>false</isActive>
                <label>CAJA MARRÓN CON ETIQUETA COLGANTE</label>
            </value>
            <value>
                <fullName>CAJA MARRÓN ETIQUETA HANGTAG</fullName>
                <isActive>false</isActive>
                <label>CAJA MARRÓN ETIQUETA HANGTAG</label>
            </value>
            <value>
                <fullName>CAJA MARRÓN SERIGRAFIADA</fullName>
                <isActive>false</isActive>
                <label>CAJA MARRÓN SERIGRAFIADA</label>
            </value>
            <value>
                <fullName>CAJA MARRÓN STICKER A COLOR</fullName>
                <isActive>false</isActive>
                <label>CAJA MARRÓN STICKER A COLOR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>