force-app/main/default/objects/Product2/fields/PackagingPersonalizado__c.field-meta.xml
<CustomField>
    <fullName>PackagingPersonalizado__c</fullName>
    <label>Packaging personalizado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>