force-app/main/default/objects/Product2/fields/PaisDelPuerto__c.field-meta.xml
<CustomField>
    <fullName>PaisDelPuerto__c</fullName>
    <formula>TEXT ( Fabrica__r.PaisDelPuerto__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>País del puerto</label>
    <type>Text</type>
</CustomField>