force-app/main/default/objects/Product2/fields/PlazoDeFabricacion__c.field-meta.xml
<CustomField>
    <fullName>PlazoDeFabricacion__c</fullName>
    <label>Plazo de fabricación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PlazoEnDias</valueSetName>
    </valueSet>
</CustomField>