force-app/main/default/objects/Product2/fields/Precio_Vigente__c.field-meta.xml
<CustomField>
    <fullName>Precio_Vigente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determina si el precio de este producto es vigente respecto al plazo de vigencia de la fábrica</description>
    <label>Precio Vigente</label>
    <type>Checkbox</type>
</CustomField>