force-app/main/default/objects/Product2/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>Product Name (in English)</description>
    <inlineHelpText>Product Name (in English)</inlineHelpText>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>