force-app/main/default/objects/Product2/fields/Producto2_detalle__c.field-meta.xml
<CustomField>
    <fullName>Producto2_detalle__c</fullName>
    <label>Producto 2 Descripcion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>