force-app/main/default/objects/Product2/fields/Producto2AltoCm__c.field-meta.xml
<CustomField>
    <fullName>Producto2AltoCm__c</fullName>
    <label>Producto 2 (alto cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>