force-app/main/default/objects/Product2/fields/Producto2AnchoCm__c.field-meta.xml
<CustomField>
    <fullName>Producto2AnchoCm__c</fullName>
    <label>Producto 2 (ancho cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>