force-app/main/default/objects/Product2/fields/Producto2DiametroCm__c.field-meta.xml
<CustomField>
    <fullName>Producto2DiametroCm__c</fullName>
    <label>Producto 2 (diámetro cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>