force-app/main/default/objects/Product2/fields/Producto2LargoCm__c.field-meta.xml
<CustomField>
    <fullName>Producto2LargoCm__c</fullName>
    <label>Producto 2 (largo cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>