force-app/main/default/objects/Product2/fields/Producto2M3__c.field-meta.xml
<CustomField>
    <fullName>Producto2M3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Producto 2 (CBM)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>