force-app/main/default/objects/Product2/fields/Producto2PesoKg__c.field-meta.xml
<CustomField>
    <fullName>Producto2PesoKg__c</fullName>
    <label>Producto 2 (N.W.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>