force-app/main/default/objects/Product2/fields/Producto3_detalle__c.field-meta.xml
<CustomField>
    <fullName>Producto3_detalle__c</fullName>
    <label>Producto 3 Descripcion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>