force-app/main/default/objects/Product2/fields/Producto3AltoCm__c.field-meta.xml
<CustomField>
    <fullName>Producto3AltoCm__c</fullName>
    <label>Producto 3 (alto cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>