force-app/main/default/objects/Product2/fields/Producto3AnchoCm__c.field-meta.xml
<CustomField>
    <fullName>Producto3AnchoCm__c</fullName>
    <label>Producto 3 (ancho cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>