force-app/main/default/objects/Product2/fields/Producto3LargoCm__c.field-meta.xml
<CustomField>
    <fullName>Producto3LargoCm__c</fullName>
    <label>Producto 3 (largo cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>