force-app/main/default/objects/Product2/fields/Producto3PesoBruto__c.field-meta.xml
<CustomField>
    <fullName>Producto3PesoBruto__c</fullName>
    <label>Producto 3 (G.W.)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>