force-app/main/default/objects/Product2/fields/Producto3PesoKg__c.field-meta.xml
<CustomField>
    <fullName>Producto3PesoKg__c</fullName>
    <label>Producto 3 (N.W.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>