force-app/main/default/objects/Product2/fields/Producto4_detalle__c.field-meta.xml
<CustomField>
    <fullName>Producto4_detalle__c</fullName>
    <label>Producto 4 detalle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>