force-app/main/default/objects/Product2/fields/Producto4AnchoCm__c.field-meta.xml
<CustomField>
    <fullName>Producto4AnchoCm__c</fullName>
    <label>Producto 4 Ancho (Cm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>