force-app/main/default/objects/Product2/fields/Producto4DiametroCm__c.field-meta.xml
<CustomField>
    <fullName>Producto4DiametroCm__c</fullName>
    <label>Producto 4 Diámetro (cm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>