force-app/main/default/objects/Product2/fields/Producto4M3__c.field-meta.xml
<CustomField>
    <fullName>Producto4M3__c</fullName>
    <label>Producto 4 (M3)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>