force-app/main/default/objects/Product2/fields/Producto4PesoBruto__c.field-meta.xml
<CustomField>
    <fullName>Producto4PesoBruto__c</fullName>
    <label>Producto 4 Peso Bruto (KG)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>