force-app/main/default/objects/Product2/fields/Producto4PesoKg__c.field-meta.xml
<CustomField>
    <fullName>Producto4PesoKg__c</fullName>
    <label>Producto 4 Peso Neto (Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>