force-app/main/default/objects/Product2/fields/ProductoBase_2__c.field-meta.xml
<CustomField>
    <fullName>ProductoBase_2__c</fullName>
    <label>Producto base (2)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>