force-app/main/default/objects/Product2/fields/ProductoBase__c.field-meta.xml
<CustomField>
    <fullName>ProductoBase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto base</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El producto no existe o no es un producto base.</errorMessage>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>1-Producto</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fábricas del producto</relationshipLabel>
    <relationshipName>FabricasDelProducto</relationshipName>
    <type>Lookup</type>
</CustomField>