force-app/main/default/objects/Product2/fields/ProductoBaseName__c.field-meta.xml
<CustomField>
    <fullName>ProductoBaseName__c</fullName>
    <formula>ProductoBase__r.ProductName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto Base: Name</label>
    <type>Text</type>
</CustomField>