force-app/main/default/objects/Product2/fields/ProductoDeFabrica_2__c.field-meta.xml
<CustomField>
    <fullName>ProductoDeFabrica_2__c</fullName>
    <label>Producto de fábrica (2)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>