force-app/main/default/objects/Product2/fields/ProductoDeFabrica__c.field-meta.xml
<CustomField>
    <fullName>ProductoDeFabrica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto de fábrica</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El producto no existe o no es un producto de fábrica.</errorMessage>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>2-Producto de Fábrica</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opciones adicionales de packaging</relationshipLabel>
    <relationshipName>OpcionesAdicionalesDePackaging</relationshipName>
    <type>Lookup</type>
</CustomField>