force-app/main/default/objects/Product2/fields/ProformaImage__c.field-meta.xml
<CustomField>
    <fullName>ProformaImage__c</fullName>
    <formula>IF( 
OR(NOT(ISBLANK(IDImagen1__c)), 
NOT(ISBLANK(ProductoBase__r.IDImagen1__c)), 
NOT(ISBLANK(ProductoDeFabrica__r.ProductoBase__r.IDImagen1__c))), 

&apos;/servlet/servlet.FileDownload?file=&apos; + 
IF( RecordType.DeveloperName == &apos;Producto&apos;, 
IDImagen1__c, 
IF(RecordType.DeveloperName == &apos;ProductoDeFabrica&apos;, 
ProductoBase__r.IDImagen1__c, 
ProductoDeFabrica__r.ProductoBase__r.IDImagen1__c)), 

&apos;/servlet/servlet.FileDownload?file=015460000005lAl&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proforma Image</label>
    <type>Text</type>
</CustomField>