force-app/main/default/objects/Product2/fields/Prospecto_de_Fabrica__c.field-meta.xml
<CustomField>
    <fullName>Prospecto_de_Fabrica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospecto de Fábrica</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>