force-app/main/default/objects/Product2/fields/Prospecto_de_Fabrica_A__c.field-meta.xml
<CustomField>
    <fullName>Prospecto_de_Fabrica_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Prospecto de producto vinculado a un proveedor activo</description>
    <inlineHelpText>Product prospect linked to an active supplier</inlineHelpText>
    <label>Prospecto de Fábrica (Proveedor Activo)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Productos (Prospecto de Fábrica (Proveedor Activo))</relationshipLabel>
    <relationshipName>ProspectosDeProducto</relationshipName>
    <type>Lookup</type>
</CustomField>