force-app/main/default/objects/Product2/fields/Proveedor_o_Candidato__c.field-meta.xml
<CustomField>
    <fullName>Proveedor_o_Candidato__c</fullName>
    <formula>IF(Prospecto_de_Fabrica__c != null,
 HYPERLINK(&apos;/lightning/r/Lead/&apos; + Prospecto_de_Fabrica__c + &apos;/view&apos;,  Prospecto_de_Fabrica__r.FirstName + &apos; &apos; + Prospecto_de_Fabrica__r.LastName),
IF(Prospecto_de_Fabrica_A__c != null,
 HYPERLINK(&apos;/lightning/r/Account/&apos; + Prospecto_de_Fabrica_A__c + &apos;/view&apos;,  Prospecto_de_Fabrica_A__r.Name),
&apos;N/A&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proveedor (o Candidato)</label>
    <type>Text</type>
</CustomField>