force-app/main/default/objects/Product2/fields/Puerto__c.field-meta.xml
<CustomField>
    <fullName>Puerto__c</fullName>
    <formula>TEXT ( Fabrica__r.Puerto__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Puerto</label>
    <type>Text</type>
</CustomField>