force-app/main/default/objects/Product2/fields/Registrado_Libra__c.field-meta.xml
<CustomField>
    <fullName>Registrado_Libra__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el producto ha sido registrado en Libra</description>
    <label>Registrado en Libra</label>
    <type>Checkbox</type>
</CustomField>