force-app/main/default/objects/Product2/fields/Similar_a_2__c.field-meta.xml
<CustomField>
    <fullName>Similar_a_2__c</fullName>
    <label>Similar a (2)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>