force-app/main/default/objects/Product2/fields/Similar_a__c.field-meta.xml
<CustomField>
    <fullName>Similar_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>El Prospecto de Producto se parece a este producto existente</description>
    <inlineHelpText>The product prospect is similar to this existing product</inlineHelpText>
    <label>Similar a</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Prospectos de Producto</relationshipLabel>
    <relationshipName>ProspectosDeProducto</relationshipName>
    <type>Lookup</type>
</CustomField>