force-app/main/default/objects/Product2/fields/Subfamilia__c.field-meta.xml
<CustomField>
    <fullName>Subfamilia__c</fullName>
    <label>Subfamilia</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0-Extra</fullName>
                <isActive>false</isActive>
                <label>0-Extra</label>
            </value>
            <value>
                <fullName>1-Aire Libre</fullName>
                <isActive>false</isActive>
                <label>1-Aire Libre</label>
            </value>
            <value>
                <fullName>1-Back to School y Oficina</fullName>
                <isActive>false</isActive>
                <label>1-Back to School y Oficina</label>
            </value>
            <value>
                <fullName>1-Fans</fullName>
            </value>
            <value>
                <fullName>1-Kids&apos; furniture</fullName>
            </value>
            <value>
                <fullName>1-Living Room Furniture</fullName>
            </value>
            <value>
                <fullName>1-Muebles de Jardín</fullName>
                <isActive>false</isActive>
                <label>1-Muebles de Jardín</label>
            </value>
            <value>
                <fullName>1-Outdoor Furniture</fullName>
            </value>
            <value>
                <fullName>1-Seguridad</fullName>
                <isActive>false</isActive>
                <label>1-Seguridad</label>
            </value>
            <value>
                <fullName>2-Creatividad</fullName>
                <isActive>false</isActive>
                <label>2-Creatividad</label>
            </value>
            <value>
                <fullName>2-Indoor Heaters</fullName>
            </value>
            <value>
                <fullName>2-Kitchen &amp; Dining Furniture</fullName>
            </value>
            <value>
                <fullName>2-Muebles de Comedor y Cocina</fullName>
                <isActive>false</isActive>
                <label>2-Muebles de Comedor y Cocina</label>
            </value>
            <value>
                <fullName>2-Outdoor Shades &amp; Structures</fullName>
            </value>
            <value>
                <fullName>2-Outdoor Toys</fullName>
            </value>
            <value>
                <fullName>2-Outdoor y Temporada</fullName>
                <isActive>false</isActive>
                <label>2-Outdoor y Temporada</label>
            </value>
            <value>
                <fullName>2-Taller</fullName>
                <isActive>false</isActive>
                <label>2-Taller</label>
            </value>
            <value>
                <fullName>3-BBQ</fullName>
                <isActive>false</isActive>
                <label>3-BBQ</label>
            </value>
            <value>
                <fullName>3-Calefacción y Climatización</fullName>
                <isActive>false</isActive>
                <label>3-Calefacción y Climatización</label>
            </value>
            <value>
                <fullName>3-Juegos de Imitación</fullName>
                <isActive>false</isActive>
                <label>3-Juegos de Imitación</label>
            </value>
            <value>
                <fullName>3-Muebles de Sala y Habitación</fullName>
                <isActive>false</isActive>
                <label>3-Muebles de Sala y Habitación</label>
            </value>
            <value>
                <fullName>3-Office Furniture</fullName>
            </value>
            <value>
                <fullName>3-Outdoor Cooking</fullName>
            </value>
            <value>
                <fullName>3-Outdoor Heaters</fullName>
            </value>
            <value>
                <fullName>4-Air Treatment</fullName>
            </value>
            <value>
                <fullName>4-Camping &amp; Beach</fullName>
            </value>
            <value>
                <fullName>4-Equipamiento de Seguridad</fullName>
                <isActive>false</isActive>
                <label>4-Equipamiento de Seguridad</label>
            </value>
            <value>
                <fullName>4-Fans</fullName>
                <isActive>false</isActive>
                <label>4-Fans</label>
            </value>
            <value>
                <fullName>4-Jardinería</fullName>
                <isActive>false</isActive>
                <label>4-Jardinería</label>
            </value>
            <value>
                <fullName>4-Muñecas y Figuras</fullName>
                <isActive>false</isActive>
                <label>4-Muñecas y Figuras</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>