force-app/main/default/objects/Product2/fields/T__c.field-meta.xml
<CustomField>
    <fullName>T__c</fullName>
    <formula>BLANKVALUE( MasterboxM3__c,0) +
BLANKVALUE( Masterbox2M3__c,0 ) +
BLANKVALUE( Masterbox3M3__c,0 ) +
BLANKVALUE( Masterbox4M3__c,0 ) +
BLANKVALUE( Masterbox5M3__c,0 ) +
BLANKVALUE( Masterbox6M3__c,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CBM</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>