force-app/main/default/objects/Product2/fields/Tech_Enlace_OneDrive__c.field-meta.xml
<CustomField>
    <fullName>Tech_Enlace_OneDrive__c</fullName>
    <label>Enlace OneDrive</label>
    <type>Url</type>
</CustomField>