force-app/main/default/objects/Product2/fields/Tech_Upload_Nombre_Fabrica__c.field-meta.xml
<CustomField>
    <fullName>Tech_Upload_Nombre_Fabrica__c</fullName>
    <label>Tech Upload Nombre Fábrica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>