force-app/main/default/objects/Product2/fields/Tech_Upload_SKU_Base__c.field-meta.xml
<CustomField>
    <fullName>Tech_Upload_SKU_Base__c</fullName>
    <label>Tech Upload SKU Base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>