force-app/main/default/objects/Product2/fields/Thumb1__c.field-meta.xml
<CustomField>
    <fullName>Thumb1__c</fullName>
    <formula>IF(
OR(NOT(ISBLANK(IDImagen1__c)),
NOT(ISBLANK(ProductoBase__r.IDImagen1__c)),
NOT(ISBLANK(ProductoDeFabrica__r.ProductoBase__r.IDImagen1__c))),

IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos; + 
  IF( OR(RecordType.DeveloperName == &apos;Producto&apos;,
        RecordType.DeveloperName == &apos;Prospecto_de_Producto&apos;),
    IDImagen1__c,
    IF(RecordType.DeveloperName == &apos;ProductoDeFabrica&apos;,
    ProductoBase__r.IDImagen1__c,
    ProductoDeFabrica__r.ProductoBase__r.IDImagen1__c))
, Name , 75, 75),

IMAGE(&apos;/servlet/servlet.FileDownload?file=015460000005lAl&apos;, &apos;No Disponible&apos;, 75, 75))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thumb 1</label>
    <type>Text</type>
</CustomField>