force-app/main/default/objects/Product2/fields/Total_Masterbox_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Masterbox_Count__c</fullName>
    <description>Conteo automatico de cuantas masterbox (1 a 6) tienen datos capturados. La Masterbox 1 siempre cuenta; 2-6 cuentan solo si tienen Largo capturado. Usado para el calculo de piezas-a-cajas del vendedor y para el resumen del Live Jack.</description>
    <formula>IF( RecordType.DeveloperName == &apos;Producto&apos;,
1 + IF(NOT(ISBLANK(Masterbox2LargoCm__c)),1,0) + IF(NOT(ISBLANK(Masterbox3LargoCm__c)),1,0) + IF(NOT(ISBLANK(Masterbox4LargoCm__c)),1,0) + IF(NOT(ISBLANK(Masterbox5LargoCm__c)),1,0) + IF(NOT(ISBLANK(Masterbox6LargoCm__c)),1,0),
IF(RecordType.DeveloperName == &apos;ProductoDeFabrica&apos;,
1 + IF(NOT(ISBLANK(ProductoBase__r.Masterbox2LargoCm__c)),1,0) + IF(NOT(ISBLANK(ProductoBase__r.Masterbox3LargoCm__c)),1,0) + IF(NOT(ISBLANK(ProductoBase__r.Masterbox4LargoCm__c)),1,0) + IF(NOT(ISBLANK(ProductoBase__r.Masterbox5LargoCm__c)),1,0) + IF(NOT(ISBLANK(ProductoBase__r.Masterbox6LargoCm__c)),1,0),
1 + IF(NOT(ISBLANK(ProductoDeFabrica__r.ProductoBase__r.Masterbox2LargoCm__c)),1,0) + IF(NOT(ISBLANK(ProductoDeFabrica__r.ProductoBase__r.Masterbox3LargoCm__c)),1,0) + IF(NOT(ISBLANK(ProductoDeFabrica__r.ProductoBase__r.Masterbox4LargoCm__c)),1,0) + IF(NOT(ISBLANK(ProductoDeFabrica__r.ProductoBase__r.Masterbox5LargoCm__c)),1,0) + IF(NOT(ISBLANK(ProductoDeFabrica__r.ProductoBase__r.Masterbox6LargoCm__c)),1,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Masterbox</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>