force-app/main/default/objects/Product2/fields/Unidades_por__c.field-meta.xml
<CustomField>
    <fullName>Unidades_por__c</fullName>
    <label>Units per Master Box 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>