force-app/main/default/objects/Product2/fields/Unidades_por_Masterbox2__c.field-meta.xml
<CustomField>
    <fullName>Unidades_por_Masterbox2__c</fullName>
    <formula>IF( RecordType.DeveloperName == &apos;Producto&apos;,
    UnidadesPorMasterBox__c,
    IF(RecordType.DeveloperName == &apos;ProductoDeFabrica&apos;,
    ProductoBase__r.UnidadesPorMasterBox__c,
    ProductoDeFabrica__r.ProductoBase__r.UnidadesPorMasterBox__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unidades por Masterbox</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>