force-app/main/default/objects/Product2/fields/UnidadesContainer20__c.field-meta.xml
<CustomField>
    <fullName>UnidadesContainer20__c</fullName>
    <label>Units / 20GP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>