force-app/main/default/objects/Product2/fields/UnidadesContainer40__c.field-meta.xml
<CustomField>
    <fullName>UnidadesContainer40__c</fullName>
    <label>Units / 40GP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>