force-app/main/default/objects/Product2/fields/UnidadesContainer40Calculado__c.field-meta.xml
<CustomField>
    <fullName>UnidadesContainer40Calculado__c</fullName>
    <formula>FLOOR(($CustomMetadata.CBM_Contenedores__mdt.X40_pies.CBM__c / Volumen_Masterbox_m3__c)) * Unidades_por_Masterbox2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units / 40GP calculado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>